--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <option value='green'>Green Theme</option>
         </select>
     </div>
+
+    <div>
+        <img id='loading-spinner' src="loading-buffering.gif" hidden>
+    </div>
     
 <script src="script.js"></script>
 </body>
