--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <img id='loading-spinner' src="loading-buffering.gif" hidden>
     </div>
     
-<script src="script.js"></script>
+<script src="toggle.js"></script>
 </body>
 </html>
